--- a/.github/workflows/abapLint.yml
+++ b/.github/workflows/abapLint.yml
@@ -1,9 +1,11 @@
 name: abapLint
 on: 
   push:
+    paths: '/src/**'
     branches: 
       - master
   pull_request:
+    paths: '/src/**'
     branches:
       - master
 jobs:
