--- a/.github/workflows/abapLint.yml
+++ b/.github/workflows/abapLint.yml
@@ -2,11 +2,11 @@ name: abapLint
   
 on: 
   push:
-    paths: '/src/**'
+    paths: '/src/**.abap'
     branches: 
       - master
   pull_request:
-    paths: '/src/**'
+    paths: '/src/**.abap'
     branches:
       - master
 
