--- a/.github/workflows/abapLint.yml
+++ b/.github/workflows/abapLint.yml
@@ -3,8 +3,12 @@ name: abapLint
 on: 
   push:
     paths: '/src/**.abap'
+    branches: 
+      - master
   pull_request:
     paths: '/src/**.abap'
+    branches:
+      - master
 
 jobs:
   abapLint:
