--- a/.github/workflows/abapLint.yml
+++ b/.github/workflows/abapLint.yml
@@ -17,4 +17,4 @@ jobs:
       - name: abapLint
         uses: abaplint/actions-abaplint@master
         env: 
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+           GITHUB_API_KEY: ${{ secrets.GITHUB_TOKEN }}  
