--- a/.github/workflows/abapLint.yml
+++ b/.github/workflows/abapLint.yml
@@ -1,10 +1,9 @@
 name: abapLint
 
-on: 
-  push:
+on:
+ push:
+    branches: [ master ]
     paths: '/src/**.abap'
-    branches:
-      - master
 
 jobs:
   abapLint:
