--- a/.github/workflows/abapLint.yml
+++ b/.github/workflows/abapLint.yml
@@ -9,7 +9,8 @@ jobs:
   abapLint:
     runs-on: ubuntu-latest
     steps:
-      - name: abapLint
-        uses: abaplint/actions-abaplint@master
-        env: 
-          GITHUB_API_KEY: ${{ secrets.GITHUB_TOKEN }}  
+     - uses: actions/checkout@v2
+     - name: abapLint
+       uses: abaplint/actions-abaplint@master
+       env: 
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
